- Edit to call other namespace.

--- a/Speaker/Speaker/Speaker.csproj
+++ b/Speaker/Speaker/Speaker.csproj
@@ -80,6 +80,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="src\test.cs" />
+    <Compile Include="src\Utils.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
